v5.7.2
- Updated - core/navigation to remove automatic `navbar-dark|light` class if present in block attributes
- Updated - core/navigation(-link/menu/submenu) upgraded to Boostrap 5.3 and adjusted to WordPress
- Updated - core/file markup and CSS updates
- Updated - core/site-logo markup and CSS updates / Ability for inline SVG upload
- Updated - core/latest-posts post_type attribute to postType
- Updated - core/post-read-more extend class to inherit button styles
- Updated - core/page-list implement page children rendering (6.2 update)
- Updated - core/table minor CSS updates + core/calendar to enqueue table CSS
- Updated - core/image to output placeholder if no image is added
- Updated - core/image to output svg inline if an svg image is uploaded
- Updated - core/media-text to output placeholder if no image is added
- Updated - core/post-template remove post m-0 class and add inline CSS
- Updated - Minimum PHP version requirement is now 7.4
- Updated - Frontend CSS move inline to global styles
- Updated - Improved wecodeart( 'assets' ) manager with easier API
- Updated - enabled useRootPaddingAwareAlignments and adjusted global CSS to fit
- Updated - base WooCommerce templates (transition to blocks instead of legacy template) to match WOO 7.3
- Updated - Gutenberg `customCSS` block attribute (from styles extension) to `customStyle`
- Updated - Utilities `gap` to `g` class for flex/grid gap (kept both for the moment)
- Updated - support removed for core block patterns
- Updated - Translated some pattern strings
- Updated - Pattern registry - add latest list of valid properties
- Updated - CSS reset simplified and optimized (moved into block styles / forms)
- Updated - Inputs styles moved inline and enqueue on demand
- Updated - Refactor blocks inline styles to use WP_Style_Engine
- Removed - __experimentalLayout for core/template-part block (also removed from templates / template edits are required)
- Removed - core/post-comments-link from Post Meta pattern